fixed align issues in the contact form for h1 text. Created a new class for the h1

--- a/css/contact.css
+++ b/css/contact.css
@@ -11,17 +11,14 @@
         margin-left: auto;
         margin-right: auto;
     }
-    h1 {
-        text-align: center;
-    }
     ul {
         list-style: none;
         padding: 0;
     }
 
-    .brand {
+    .brandx {
         text-align: center;
-    }
+    } 
 
     .brand span {
         color: #fff;
